# sudo-rs

./: .cirrus.yml  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  Dockerfile  FAQ.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SECURITY.md  Write  build.rs  clippy.toml  freebsd_install_instructions.sh  make-lcov-info.bash  run_freebsd.sh
lib/sudo-common/: Cargo.toml  build.rs
lib/sudo-common/src/: command.rs  context.rs  env.rs  error.rs  exec.rs  lib.rs  pam.rs  resolve.rs  sysuser.rs  wildcard_match.rs
lib/sudo-common/tests/: env_tests.rs
lib/sudo-env/: Cargo.toml  build.rs
lib/sudo-env/src/: environment.rs  lib.rs  wildcard_match.rs
lib/sudo-env/tests/: env_tests.rs
lib/sudo-exec/: Cargo.toml
lib/sudo-exec/src/: backchannel.rs  event.rs  events.rs  lib.rs  monitor.rs  parent.rs  pty.rs  signal.rs  socket.rs
lib/sudo-log/: Cargo.toml
lib/sudo-log/src/: lib.rs
lib/sudo-system/: Cargo.toml
lib/sudo-system/src/: audit.rs  file.rs  interface.rs  lib.rs  poll.rs  signal.rs  term.rs  time.rs  timestamp.rs
lib/sudoers/: Cargo.toml
lib/sudoers/src/: ast.rs  ast_names.rs  basic_parser.rs  char_stream.rs  compute_hash.rs  lib.rs  policy.rs  sysuser.rs  tokens.rs
lib/sudoers/src/test/: mod.rs
sudo/: Cargo.toml
sudo/lib/: mod.rs
sudo/lib/cli/: mod.rs
sudo/lib/common/: error.rs  resolve.rs
sudo/lib/env/: environment.rs
sudo/lib/exec/: backchannel.rs  event.rs  io_util.rs  mod.rs  monitor.rs  parent.rs
sudo/lib/log/: mod.rs  syslog.rs
sudo/lib/pam/: converse.rs  mod.rs  securemem.rs
sudo/lib/sudoers/: ast.rs  ast_names.rs  char_stream.rs  mod.rs  policy.rs  tokens.rs
sudo/lib/system/: interface.rs  mod.rs  poll.rs  term.rs  timestamp.rs  wait.rs
sudo/lib/system/term/: mod.rs  ops.rs  user_term.rs
sudo/src/: cli_args.rs  diagnostic.rs  main.rs  pam.rs  pipeline.rs
sudo/src/lib/common/: command.rs  context.rs
sudo/src/lib/defaults/: settings_dsl.rs
sudo/src/lib/env/: environment.rs  wildcard_match.rs
sudo/src/lib/exec/: backchannel.rs  event.rs  io_util.rs  parent.rs
sudo/src/lib/pam/: error.rs  mod.rs  rpassword.rs  securemem.rs  sys.rs
sudo/src/lib/pam-sys/: Cargo.toml  build.rs
sudo/src/lib/sudoers/: ast.rs  basic_parser.rs  mod.rs  tokens.rs
sudo/src/lib/sudoers/test/: mod.rs
sudo/src/lib/system/: file.rs  interface.rs  poll.rs  time.rs
sudo/tests/: cli.rs  env_tests.rs
test-binaries/: Cargo.toml  checkpermit.rs  sudoers
test-framework/sudo-compliance-tests/: Cargo.toml
test-framework/sudo-compliance-tests/src/: child_process.rs  cli.rs  env_reset.rs  flag_chdir.rs  flag_group.rs  flag_list.rs  flag_login.rs  flag_non_interactive.rs  flag_shell.rs  flag_user.rs  helpers.rs  lecture.rs  lecture_file.rs  lib.rs  limits.rs  macros.rs  misc.rs  nopasswd.rs  pam.rs  pass_auth.rs  passwd.rs  password_retry.rs  path_search.rs  perms.rs  su.rs  sudo.rs  sudo_ps1.rs  sudoedit.rs  sudoers.rs  syslog.rs  timestamp.rs  use_pty.rs  visudo.rs
test-framework/sudo-compliance-tests/src/child_process/signal_handling/: expects-signal.sh  kill-sudo.sh  mod.rs
test-framework/sudo-compliance-tests/src/flag_list/: flag_other_user.rs  needs_auth.rs  nopasswd.rs
test-framework/sudo-compliance-tests/src/pam/: env.rs
test-framework/sudo-compliance-tests/src/pass_auth/: stdin.rs  tty.rs
test-framework/sudo-compliance-tests/src/password_retry/: time-password-retry.sh
test-framework/sudo-compliance-tests/src/snapshots/flag_group/: unassigned_group_id_is_rejected.snap
test-framework/sudo-compliance-tests/src/snapshots/flag_login/: if_home_directory_does_not_exist_executes_program_without_changing_the_working_directory.snap  insufficient_permissions_to_execute_shell.snap  shell_does_not_exist.snap
test-framework/sudo-compliance-tests/src/snapshots/flag_shell/: shell_does_not_exist.snap  shell_is_not_executable.snap
test-framework/sudo-compliance-tests/src/snapshots/flag_user/: unassigned_user_id_is_rejected-2.snap  unassigned_user_id_is_rejected.snap
test-framework/sudo-compliance-tests/src/snapshots/misc/: user_not_in_passwd_database_cannot_use_sudo.snap
test-framework/sudo-compliance-tests/src/snapshots/passwd/: changed_default.snap  explicit_passwd_overrides_nopasswd.snap
test-framework/sudo-compliance-tests/src/snapshots/path_search/: when_path_is_unset_does_not_search_in_default_path_set_for_command_execution.snap
test-framework/sudo-compliance-tests/src/snapshots/secure_path/: dash_dash_before_flag_is_an_error.snap
test-framework/sudo-compliance-tests/src/snapshots/visudo/: passes_temporary_file_to_editor.snap  (+2 more)
test-framework/sudo-compliance-tests/src/su/: cli.rs  env.rs  flag_command.rs  flag_group.rs  flag_login.rs  flag_preserve_environment.rs  flag_pty.rs  flag_shell.rs  flag_supp_group.rs  flag_whitelist_environment.rs  limits.rs  pam.rs  syslog.rs
test-framework/sudo-compliance-tests/src/sudo/: apparmor.rs  child_process.rs  cli.rs  env_reset.rs  flag_background.rs  flag_chdir.rs  flag_group.rs  flag_help.rs  flag_list.rs  flag_login.rs  flag_non_interactive.rs  flag_preserve_environment.rs  flag_prompt.rs  flag_shell.rs  flag_user.rs  flag_version.rs  lecture.rs  lecture_file.rs  limits.rs  misc.rs  nopasswd.rs  pam.rs  pass_auth.rs  passwd.rs  password_retry.rs  path_search.rs  perms.rs  sudo_ps1.rs  sudoers.rs  syslog.rs  timestamp.rs  umask.rs  use_pty.rs
test-framework/sudo-compliance-tests/src/sudoedit/: kill-sudoedit.sh  limits.rs  sudoers.rs
test-framework/sudo-compliance-tests/src/sudoers/: cmnd.rs  cmnd_alias.rs  cwd.rs  env.rs  env_keep.rs  host_alias.rs  host_list.rs  include.rs  includedir.rs  run_as.rs  runas_alias.rs  secure_path.rs  timestamp_timeout.rs  user_list.rs
test-framework/sudo-compliance-tests/src/timestamp/: remove.rs  reset.rs  validate.rs
test-framework/sudo-compliance-tests/src/visudo/: flag_check.rs  flag_file.rs  flag_help.rs  flag_no_includes.rs  flag_owner.rs  flag_perms.rs  flag_quiet.rs  flag_strict.rs  flag_version.rs  include.rs  kill-visudo.sh  sudoers.rs  what_now_prompt.rs
(+421 files in other folders)
