[package]
name = "sudo-rs"
description = "A memory safe implementation of sudo and su."
version = "0.2.3"
license = "Apache-2.0 OR MIT"
edition = "2021"
repository = "https://github.com/trifectatechfoundation/sudo-rs"
homepage = "https://github.com/trifectatechfoundation/sudo-rs"
publish = true
categories = ["command-line-interface"]

rust-version = "1.70"

default-run = "sudo"

[lib]
path = "src/lib.rs"

[[bin]]
name = "sudo"
path = "bin/sudo.rs"

[[bin]]
name = "su"
path = "bin/su.rs"

[[bin]]
name = "visudo"
path = "bin/visudo.rs"

[dependencies]
libc = "0.2.127"
glob = "0.3.0"
log = { version = "0.4.11", features = ["std"] }

[dev-dependencies]
pretty_assertions = "1.2.1"

[features]
default = []
dev = []

[profile.release]
strip = "symbols"
lto = true
opt-level = "s"
