[package]
name = "sudo"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
categories = ["command-line-interface"]

[dependencies]
sudo-env.workspace = true
sudo-common.workspace = true
sudo-system.workspace = true
sudo-cli.workspace = true
sudoers.workspace = true
sudo-pam.workspace = true
sudo-exec.workspace = true
