[package]
name = "sudo"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
categories = ["command-line-interface"]

[dependencies]
sudo-cli.workspace = true
sudo-common.workspace = true
sudo-env.workspace = true
sudo-exec.workspace = true
sudo-mail.workspace = true
sudo-pam.workspace = true
sudo-system.workspace = true
sudoers.workspace = true
