[package]
name = "sudo"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
categories = ["command-line-interface"]

[lib]
name = "sudo"
path = "lib/mod.rs"

[[bin]]
name = "sudo"
path = "src/main.rs"

[dependencies]
libc.workspace = true
signal-hook = { workspace = true, features = [ "extended-siginfo" ] }
signal-hook-registry.workspace = true
log.workspace = true
env_logger = { workspace = true, default-features = false }
glob.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true

[features]
default = []
dev = []
