[package]
name = "test-binaries"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sudo-common = {path="../lib/sudo-common"}
sudoers = {path="../lib/sudoers"}
libc = "0.2.139"

[[bin]]
name = "checkpermit"
path = "checkpermit.rs"
