[package]
name = "test-binaries"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sudo-system.workspace = true
sudoers.workspace = true
libc.workspace = true

[[bin]]
name = "checkpermit"
path = "checkpermit.rs"
