[package]
name = "test-binaries"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sudo-system.workspace = true
sudoers.workspace = true
libc.workspace = true

[[bin]]
name = "checkpermit"
path = "checkpermit.rs"
