[package]
name = "sudo-common"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
build = "build.rs"

[dependencies]
libc = "0.2.139"
sudo-cli = { path = "../sudo-cli" }
sudo-pam = { path = "../sudo-pam" }
sudo-system = { path = "../sudo-system" }
thiserror = "1.0.38"
which = "4.4.0"

[dev-dependencies]
sudo-cli = { path = "../sudo-cli" }
