[package]
name = "sudo-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
build = "build.rs"

[dependencies]
sudo-cli.workspace = true
sudo-pam.workspace = true
sudo-system.workspace = true
sudoers.workspace = true
libc.workspace = true
thiserror.workspace = true
which.workspace = true
