[package]
name = "sudo-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true

[dependencies]
libc.workspace = true
sudo-cli.workspace = true
sudo-pam.workspace = true
sudo-system.workspace = true
