[package]
name = "sudo-env"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
build = "build.rs"

[dependencies]
sudo-system.workspace = true
sudo-common.workspace = true
sudoers.workspace = true

[dev-dependencies]
sudo-cli.workspace = true
