[package]
name = "sudo-exec"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true

[dependencies]
libc.workspace = true
signal-hook = { workspace = true, features = [ "extended-siginfo" ] }
sudo-common.workspace = true 
