[package]
name = "sudo-log"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true

[dependencies]
log.workspace = true
syslog.workspace = true
env_logger = { workspace = true, default-features = false }
