[package]
name = "sudo-system"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true

[dependencies]
libc.workspace = true
sudo-cutils.workspace = true
sudo-log.workspace = true
signal-hook.workspace = true
signal-hook-registry.workspace = true

[dev-dependencies]
tempfile.workspace = true
