[package]
name = "sudoers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true

[dependencies]
sudo-defaults.workspace = true
sudo-system.workspace = true
sudo-log.workspace = true
glob.workspace = true
