[package]
name = "sudo-compliance-tests"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dev-dependencies]
pretty_assertions = "1.3.0"
insta = { version = "1.29.0", features = [ "filters" ] }
sudo-test.path = "../sudo-test"

[features]
default = []
apparmor = ["sudo-test/apparmor"]
